--- a/index.html
+++ b/index.html
@@ -53,22 +53,24 @@
           </ul>
         </div>
         <!-- Overlay -->
-        <div class="overlay"></div>
-        <div class="mobile-menu">
-          <div class="close_btn_div">
-            <p class="close_btn">X</p>
-          </div>
-          <ul class="mobilemenu">
-            <li class="nav-button">Home</li>
-            <li class="nav-button">About</li>
-            <li class="nav-button">Contact Us</li>
-            <li class="nav-button">Members</li>
-          </ul>
-          <div class="mobileauthbtn">
-            <button class="mobilecommon_btn">Login</button>
-            <button class="mobilecommon_btn">Sign Up</button>
+        <div class="overlay">
+          <div class="mobile-menu">
+            <div class="close_btn_div">
+              <p class="close_btn">X</p>
+            </div>
+            <ul class="mobilemenu">
+              <li class="nav-button">Home</li>
+              <li class="nav-button">About</li>
+              <li class="nav-button">Contact Us</li>
+              <li class="nav-button">Members</li>
+            </ul>
+            <div class="mobileauthbtn">
+              <button class="mobilecommon_btn">Login</button>
+              <button class="mobilecommon_btn">Sign Up</button>
+            </div>
           </div>
         </div>
+
       </header>
       <!-- Header End -->
 
