newscard in column

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             <h5 style="color: var(--primary-color);">Trending</h5>
             <h6 style="cursor: pointer;">View all</h6>
           </div>
-          <div id='trending' class="newssection-container">
+          <div id='trending' class="row">
+            
           </div>
         </Section>
         <!-- News Section Start -->
