--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,6 @@
               <p class="ldesc">Anytime, Anywhere</p>
             </div>
           </a>
-
           <div>
             <ul class="nav-menu">
               <a href="index.html">
@@ -102,47 +101,50 @@
       <!-- Main Content Start -->
       <div class="main_content">
 
-        <!-- Hero Section Start-->
-        <Section>
-          <div class="section-hero">
-            <div class="hero-container">
-              <h2 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi, cumque
-                corrupti minima perspiciatis et aut voluptatum ratione. Exercitationem, veritatis.</h2>
-              <p class="hero-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, quibusdam
-                necessitatibus. Libero molestias consectetur facilis minima eos aliquid voluptates? Architecto velit
-                doloremque illum temporibus iste ex quidem dolorum, praesentium cumque facere aspernatur incidunt
-                reiciendis nam deserunt expedita, magnam quis consequuntur culpa rerum vitae debitis iure veniam non?
-                Veniam similique rem iure modi est tempore ducimus?</p>
-              <div class="hero-click">
-                <h5>Read Article</h5>
-                <img src="assets/images/rightarrow.svg" alt="arrow-right" class="hero-arrow">
+        <!-- FAQ Section Start -->
+        <section class="container">
+          <h3 class="faq-title">Frequently Asked Questions</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste. Expedita optio eius neque
+            praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
+            voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
+            quidem architecto!</p>
+          <div class="faq-accordian-container">
+            <div class="accordion accordion-flush" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+                    plugin adds
+                    the appropriate classes that we use to style each element. These classes control the overall
+                    appearance, as well
+                    as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
+                    overriding our
+                    default variables. It's also worth noting that just about any HTML can go within the
+                    <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </Section>
-        <!-- Hero Section End-->
-
-        <!-- News Section Start -->
-        <Section class="container">
-          <div class="section-titles">
-            <h5 style="color: var(--primary-color);">Trending</h5>
-            <h6 style="cursor: pointer;">View all</h6>
-          </div>
-          <div id='trending' class="row"></div>
-        </Section>
-        <!-- News Section End -->
+        </section>
+        <!-- FAQ Section End -->
+        <!-- Main Content End -->
       </div>
-      <!-- Main Content End -->
-    </div>
 
-    <script src="assets/js/jQuery v3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"></script>
-    <script src="assets/js/custom.js"></script>
+      <script src="assets/js/jQuery v3.7.1.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+      <script src="assets/js/custom.js"></script>
   </body>
 
 </html>
