--- a/faq.html
+++ b/faq.html
@@ -109,28 +109,7 @@
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
           <div class="faq-accordian-container">
-            <div class="accordion accordion-flush" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    Accordion Item #1
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
-                    plugin adds
-                    the appropriate classes that we use to style each element. These classes control the overall
-                    appearance, as well
-                    as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or
-                    overriding our
-                    default variables. It's also worth noting that just about any HTML can go within the
-                    <code>.accordion-body</code>, though the transition does limit overflow.
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="accordion accordion-flush" id="accordionExample"></div>
           </div>
         </section>
         <!-- FAQ Section End -->
@@ -148,3 +127,28 @@
   </body>
 
 </html>
+
+
+
+<!-- <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    <div
+                      style="background-color: var(--primary-color); width: 0.8rem; height: 0.8rem; margin: 0.7rem; border-radius: 0.3rem;">
+                    </div>
+                    </>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia accusantium sint incidunt sit
+                    at!
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet adipisci eius ipsa!
+                    Dolorum voluptatum
+                    voluptatibus assumenda maxime dolor et dolores totam velit illum numquam, ab, quasi illo temporibus.
+                    Quae soluta numquam
+                    deleniti unde! Beatae nostrum porro excepturi consectetur saepe?
+                  </div>
+                </div>
+              </div> -->
