--- a/faq.html
+++ b/faq.html
@@ -104,7 +104,7 @@
         <!-- FAQ Section Start -->
         <section class="container">
           <h3 class="faq-title">Frequently Asked Questions</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste. Expedita optio eius neque
+          <p class="faq-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste. Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
