partners section added

--- a/about.html
+++ b/about.html
@@ -103,15 +103,8 @@
 
         <!-- FAQ Section Start -->
         <section class="container">
-          <h3 class="section-title">Frequently Asked Questions</h3>
-          <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
-            Expedita optio eius neque
-            praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
-            voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
-            quidem architecto!</p>
-          <div class="faq-accordian-container">
-            <div class="accordion accordion-flush" id="accordionExample"></div>
-          </div>
+          <h3 class="faq-title">About Us</h3>
+
         </section>
         <!-- FAQ Section End -->
         <!-- Main Content End -->
