--- a/index.html
+++ b/index.html
@@ -128,9 +128,48 @@
             <h5 style="color: var(--primary-color);">Trending</h5>
             <h6 style="cursor: pointer;">View all</h6>
           </div>
-          <div id='trending' class="row"></div>
+          <div id='trending' class="row news-row"></div>
+          <div class="section-titles">
+            <h5 style="color: var(--primary-color);">Latest</h5>
+            <h6 style="cursor: pointer;">View all</h6>
+          </div>
+          <div id='yml' class="row news-row"></div>
+          <div class="section-titles">
+            <h5 style="color: var(--primary-color);">You may like</h5>
+            <h6 style="cursor: pointer;">View all</h6>
+          </div>
+          <div id='latest' class="row news-row"></div>
         </Section>
         <!-- News Section End -->
+        <!-- Trusted Partner start -->
+        <section class="container tp-container text-center">
+          <h3 class="section-title">Our Trusted Partners</h3>
+          <div class="ico-container">
+            <div class="ico-div">
+              <div class="pngico">
+                <img src="assets/images/partner/bbc.png" alt="bbc">
+              </div>
+              <div class="pngico">
+                <img src="assets/images/partner/cnbc.png" alt="cnbc">
+              </div>
+              <div class="pngico">
+                <img src="assets/images/partner/cnn.png" alt="cnn">
+              </div>
+            </div>
+            <div class="ico-div">
+              <div class="pngico">
+                <img src="assets/images/partner/CoinDesk.png" alt="bbc">
+              </div>
+              <div class="pngico">
+                <img src="assets/images/partner/foxnews.png" alt="cnbc">
+              </div>
+              <div class="pngico">
+                <img src="assets/images/partner/reuters.png" alt="cnn">
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Trusted Partner end -->
       </div>
       <!-- Main Content End -->
     </div>
@@ -146,3 +185,8 @@
   </body>
 
 </html>
+
+
+<!-- <img src="assets/images/partner/bbc.png" alt="bbc" class="pngico">
+              <img src="assets/images/partner/cnbc.png" alt="cnbc" class="pngico">
+              <img src="assets/images/partner/cnn.png" alt="cnn" class="pngico"> -->
