--- a/membership.html
+++ b/membership.html
@@ -38,7 +38,7 @@
               <a href="#">
                 <li class="nav-button">Contact Us</li>
               </a>
-              <a href="membership.html">
+              <a href="#">
                 <li class="nav-button">Membership</li>
               </a>
               <a href="faq.html">
@@ -81,7 +81,7 @@
               <a href="#">
                 <li class="nav-button">Contact Us</li>
               </a>
-              <a href="membership.html">
+              <a href="#">
                 <li class="nav-button">Membership</li>
               </a>
               <a href="faq.html">
@@ -101,19 +101,57 @@
       <!-- Main Content Start -->
       <div class="main_content">
 
-        <!-- FAQ Section Start -->
+        <!-- Membership Section Start -->
         <section class="container">
-          <h3 class="section-title">Frequently Asked Questions</h3>
+          <h3 class="faq-title">Become A Member</h3>
           <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
             voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
             quidem architecto!</p>
-          <div class="faq-accordian-container">
-            <div class="accordion accordion-flush" id="accordionExample"></div>
+          <div class="row column-gap-4 justify-content-center card-padding-small">
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Free</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <button id="free" class="mem-button">Sign Up</button>
+            </div>
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Standard</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <button id="standard" class="mem-button">Sign Up</button>
+            </div>
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Premium</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <button id="premium" class="mem-button">Sign Up</button>
+            </div>
           </div>
         </section>
-        <!-- FAQ Section End -->
+        <!-- Membership Section End -->
         <!-- Main Content End -->
       </div>
 
