hero background wrapper added

--- a/index.html
+++ b/index.html
@@ -111,23 +111,6 @@
           <div id='hero-news' class="owl-carousel owl-theme">
 
           </div>
-          <!-- <div class="section-hero">
-            <div class="hero-container">
-              <h2 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi, cumque
-                corrupti minima perspiciatis et aut voluptatum ratione. Exercitationem, veritatis.</h2>
-              <p class="hero-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, quibusdam
-                necessitatibus. Libero molestias consectetur facilis minima eos aliquid voluptates? Architecto velit
-                doloremque illum temporibus iste ex quidem dolorum, praesentium cumque facere aspernatur incidunt
-                reiciendis nam deserunt expedita, magnam quis consequuntur culpa rerum vitae debitis iure veniam non?
-                Veniam similique rem iure modi est tempore ducimus?</p>
-              <div class="hero-click">
-                <h5>Read Article</h5>
-                <div class="hero-arrow">
-                  <p style="font-size:x-large;">&#x2192;</p>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </Section>
         <!-- Hero Section End-->
 
@@ -201,3 +184,23 @@
 <!-- <img src="assets/images/partner/bbc.png" alt="bbc" class="pngico">
               <img src="assets/images/partner/cnbc.png" alt="cnbc" class="pngico">
               <img src="assets/images/partner/cnn.png" alt="cnn" class="pngico"> -->
+
+<!-- <div class="section-hero">
+                      <div class="bg-wrapper">
+                        <div class="hero-container">
+                          <h2 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi, cumque
+                            corrupti minima perspiciatis et aut voluptatum ratione. Exercitationem, veritatis.</h2>
+                          <p class="hero-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, quibusdam
+                            necessitatibus. Libero molestias consectetur facilis minima eos aliquid voluptates? Architecto velit
+                            doloremque illum temporibus iste ex quidem dolorum, praesentium cumque facere aspernatur incidunt
+                            reiciendis nam deserunt expedita, magnam quis consequuntur culpa rerum vitae debitis iure veniam non?
+                            Veniam similique rem iure modi est tempore ducimus?</p>
+                          <div class="hero-click">
+                            <h5>Read Article</h5>
+                            <div class="hero-arrow">
+                              <p style="font-size:x-large;">&#x2192;</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div> -->
