--- a/membership.html
+++ b/membership.html
@@ -103,7 +103,7 @@
 
         <!-- Membership Section Start -->
         <section class="container">
-          <h3 class="faq-title">Become A Member</h3>
+          <h3 class="section-title">Become A Member</h3>
           <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
             Expedita optio eius neque
             praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
