common navbar created

--- a/index.html
+++ b/index.html
@@ -23,88 +23,29 @@
   <body>
     <div class="main_wrapper">
       <!-- Header Start -->
-      <header>
-        <div class="nav-header">
-          <a href="index.html">
-            <div class="logo">
-              <p class="lname">ND</p>
-              <p class="ldesc">Anytime, Anywhere</p>
-            </div>
-          </a>
-
-          <div>
-            <ul class="nav-menu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="membership.html">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="faq.html">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-          </div>
-          <div class="auth-btn">
-            <button class="common_btn">Login</button>
-            <button class="common_btn">Sign Up</button>
-          </div>
-          <div class="hbmenu">
-            <img src="assets/images/icons8-hamburger-menu.svg" alt="menu">
-          </div>
-        </div>
-
-        <div class="newsmenu">
-          <ul class="nav-menu">
-            <li class="nav-button newmenu-btn">Latest</li>
-            <li class="nav-button newmenu-btn">Science & Tech</li>
-            <li class="nav-button newmenu-btn">Blockchain</li>
-            <li class="nav-button newmenu-btn">Finance</li>
-            <li class="nav-button newmenu-btn">Health</li>
-            <li class="nav-button newmenu-btn">Sports</li>
-          </ul>
-        </div>
-        <!-- Overlay -->
-        <div class="overlay">
-          <div class="mobile-menu">
-            <div class="close_btn_div">
-              <p class="close_btn">X</p>
-            </div>
-            <ul class="mobilemenu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="membership.html">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="faq.html">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-            <div class="mobileauthbtn">
-              <button class="mobilecommon_btn">Login</button>
-              <button class="mobilecommon_btn">Sign Up</button>
-            </div>
-          </div>
-        </div>
-
-      </header>
+      <header id="navbar-placeholder"></header>
       <!-- Header End -->
 
       <!-- Main Content Start -->
       <div class="main_content">
+        <!-- Login Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- Hero Section Start-->
         <Section>
