--- a/membership.html
+++ b/membership.html
@@ -19,83 +19,7 @@
   <body>
     <div class="main_wrapper">
       <!-- Header Start -->
-      <header>
-        <div class="nav-header">
-          <a href="index.html">
-            <div class="logo">
-              <p class="lname">ND</p>
-              <p class="ldesc">Anytime, Anywhere</p>
-            </div>
-          </a>
-          <div>
-            <ul class="nav-menu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="faq.html">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-          </div>
-          <div class="auth-btn">
-            <button class="common_btn">Login</button>
-            <button class="common_btn">Sign Up</button>
-          </div>
-          <div class="hbmenu">
-            <img src="assets/images/icons8-hamburger-menu.svg" alt="menu">
-          </div>
-        </div>
-
-        <div class="newsmenu">
-          <ul class="nav-menu">
-            <li class="nav-button newmenu-btn">Latest</li>
-            <li class="nav-button newmenu-btn">Science & Tech</li>
-            <li class="nav-button newmenu-btn">Blockchain</li>
-            <li class="nav-button newmenu-btn">Finance</li>
-            <li class="nav-button newmenu-btn">Health</li>
-            <li class="nav-button newmenu-btn">Sports</li>
-          </ul>
-        </div>
-        <!-- Overlay -->
-        <div class="overlay">
-          <div class="mobile-menu">
-            <div class="close_btn_div">
-              <p class="close_btn">X</p>
-            </div>
-            <ul class="mobilemenu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="faq.html">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-            <div class="mobileauthbtn">
-              <button class="mobilecommon_btn">Login</button>
-              <button class="mobilecommon_btn">Sign Up</button>
-            </div>
-          </div>
-        </div>
-
-      </header>
+      <header id="navbar-placeholder"></header>
       <!-- Header End -->
 
       <!-- Main Content Start -->
