--- a/index.html
+++ b/index.html
@@ -23,7 +23,89 @@
   <body>
     <div class="main_wrapper">
       <!-- Header Start -->
-      <header id="navbar-placeholder"></header>
+      <header>
+        <!-- Navbar Start -->
+        <div class="nav-header">
+          <a href="index.html">
+            <div class="logo">
+              <p class="lname">ND</p>
+              <p class="ldesc">Anytime, Anywhere</p>
+            </div>
+          </a>
+
+          <div>
+            <ul class="nav-menu">
+              <a href="index.html">
+                <li class="nav-button">Home</li>
+              </a>
+              <a href="#">
+                <li class="nav-button">About</li>
+              </a>
+              <a href="#">
+                <li class="nav-button">Contact Us</li>
+              </a>
+              <a href="#member">
+                <li class="nav-button">Membership</li>
+              </a>
+              <a href="#faq">
+                <li class="nav-button">FAQ</li>
+              </a>
+            </ul>
+          </div>
+          <div class="auth-btn">
+            <button class="common_btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
+            <button class="common_btn">Sign Up</button>
+          </div>
+          <div class="hbmenu">
+            <img src="assets/images/icons8-hamburger-menu.svg" alt="menu">
+          </div>
+        </div>
+
+        <div class="newsmenu">
+          <ul class="nav-menu">
+            <li class="nav-button newmenu-btn">Latest</li>
+            <li class="nav-button newmenu-btn">Science & Tech</li>
+            <li class="nav-button newmenu-btn">Blockchain</li>
+            <li class="nav-button newmenu-btn">Finance</li>
+            <li class="nav-button newmenu-btn">Health</li>
+            <li class="nav-button newmenu-btn">Sports</li>
+          </ul>
+        </div>
+
+
+        <!-- Overlay Mobile Menu Start -->
+        <div class="overlay">
+          <div class="mobile-menu">
+            <div class="close_btn_div">
+              <p class="close_btn">X</p>
+            </div>
+            <ul class="mobilemenu">
+              <a href="index.html">
+                <li class="nav-button">Home</li>
+              </a>
+              <a href="#">
+                <li class="nav-button">About</li>
+              </a>
+              <a href="#">
+                <li class="nav-button">Contact Us</li>
+              </a>
+              <a href="#member">
+                <li class="nav-button">Membership</li>
+              </a>
+              <a href="#faq">
+                <li class="nav-button">FAQ</li>
+              </a>
+            </ul>
+            <div class="mobileauthbtn">
+              <button class="mobilecommon_btn">Login</button>
+              <button class="mobilecommon_btn">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <!-- Overlay Mobile Menu End -->
+
+        <!-- Navbar End -->
+      </header>
       <!-- Header End -->
 
       <!-- Main Content Start -->
@@ -105,6 +187,72 @@
         </section>
         <!-- Trusted Partner end -->
       </div>
+
+      <!-- Membership Section Start -->
+      <section id="member" class="container text-center">
+        <h3 class="section-title">Become A Member</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
+          Expedita optio eius neque
+          praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
+          voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
+          quidem architecto!</p>
+        <div class="row column-gap-4 justify-content-center card-padding-small">
+          <div class="col-lg-3 col-md-5 mem-card">
+            <h3 class="card-title">Free</h3>
+            <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
+            <ul>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+            <button id="free" class="mem-button">Sign Up</button>
+          </div>
+          <div class="col-lg-3 col-md-5 mem-card">
+            <h3 class="card-title">Standard</h3>
+            <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
+            <ul>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+            <button id="standard" class="mem-button">Sign Up</button>
+          </div>
+          <div class="col-lg-3 col-md-5 mem-card">
+            <h3 class="card-title">Premium</h3>
+            <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
+            <ul>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+            <button id="premium" class="mem-button">Sign Up</button>
+          </div>
+        </div>
+      </section>
+      <!-- Membership Section End -->
+
+      <!-- FAQ Section Start -->
+      <section id="faq" class="container text-center">
+        <h3 class="section-title">Frequently Asked Questions</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
+          Expedita optio eius neque
+          praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
+          voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
+          quidem architecto!</p>
+        <div class="faq-accordian-container">
+          <div class="accordion accordion-flush" id="accordionExample"></div>
+        </div>
+      </section>
+      <!-- FAQ Section End -->
       <!-- Main Content End -->
     </div>
 
@@ -120,28 +268,3 @@
   </body>
 
 </html>
-
-
-<!-- <img src="assets/images/partner/bbc.png" alt="bbc" class="pngico">
-              <img src="assets/images/partner/cnbc.png" alt="cnbc" class="pngico">
-              <img src="assets/images/partner/cnn.png" alt="cnn" class="pngico"> -->
-
-<!-- <div class="section-hero">
-                      <div class="bg-wrapper">
-                        <div class="hero-container">
-                          <h2 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sequi, cumque
-                            corrupti minima perspiciatis et aut voluptatum ratione. Exercitationem, veritatis.</h2>
-                          <p class="hero-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, quibusdam
-                            necessitatibus. Libero molestias consectetur facilis minima eos aliquid voluptates? Architecto velit
-                            doloremque illum temporibus iste ex quidem dolorum, praesentium cumque facere aspernatur incidunt
-                            reiciendis nam deserunt expedita, magnam quis consequuntur culpa rerum vitae debitis iure veniam non?
-                            Veniam similique rem iure modi est tempore ducimus?</p>
-                          <div class="hero-click">
-                            <h5>Read Article</h5>
-                            <div class="hero-arrow">
-                              <p style="font-size:x-large;">&#x2192;</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div> -->
