--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Login</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -157,8 +157,9 @@
           <div id='yml' class="owl-carousel news-row news-section"></div>
         </Section>
         <!-- News Section End -->
+
         <!-- Trusted Partner start -->
-        <section class="container tp-container text-center">
+        <section id="otp" class="container tp-container text-center">
           <h3 class="section-title">Our Trusted Partners</h3>
           <div class="ico-container">
             <div class="ico-div">
