--- a/index.html
+++ b/index.html
@@ -16,118 +16,19 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+    <script src="assets/js/main.js"></script>
     <title>News Desk - Latest News, Anytime, Anywhere</title>
   </head>
 
   <body>
+
     <div class="main_wrapper">
       <!-- Header Start -->
-      <header>
-        <!-- Navbar Start -->
-        <div class="nav-header">
-          <a href="index.html">
-            <div class="logo">
-              <p class="lname">ND</p>
-              <p class="ldesc">Anytime, Anywhere</p>
-            </div>
-          </a>
-
-          <div>
-            <ul class="nav-menu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="#member">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="#faq">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-          </div>
-          <div class="auth-btn">
-            <button class="common_btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
-            <button class="common_btn">Sign Up</button>
-          </div>
-          <div class="hbmenu">
-            <img src="assets/images/icons8-hamburger-menu.svg" alt="menu">
-          </div>
-        </div>
-
-        <div class="newsmenu">
-          <ul class="nav-menu">
-            <li class="nav-button newmenu-btn">Latest</li>
-            <li class="nav-button newmenu-btn">Science & Tech</li>
-            <li class="nav-button newmenu-btn">Blockchain</li>
-            <li class="nav-button newmenu-btn">Finance</li>
-            <li class="nav-button newmenu-btn">Health</li>
-            <li class="nav-button newmenu-btn">Sports</li>
-          </ul>
-        </div>
-
-
-        <!-- Overlay Mobile Menu Start -->
-        <div class="overlay">
-          <div class="mobile-menu">
-            <div class="close_btn_div">
-              <p class="close_btn">X</p>
-            </div>
-            <ul class="mobilemenu">
-              <a href="index.html">
-                <li class="nav-button">Home</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">About</li>
-              </a>
-              <a href="#">
-                <li class="nav-button">Contact Us</li>
-              </a>
-              <a href="#member">
-                <li class="nav-button">Membership</li>
-              </a>
-              <a href="#faq">
-                <li class="nav-button">FAQ</li>
-              </a>
-            </ul>
-            <div class="mobileauthbtn">
-              <button class="mobilecommon_btn">Login</button>
-              <button class="mobilecommon_btn">Sign Up</button>
-            </div>
-          </div>
-        </div>
-        <!-- Overlay Mobile Menu End -->
-
-        <!-- Navbar End -->
-      </header>
+      <custom-nav></custom-nav>
       <!-- Header End -->
 
       <!-- Main Content Start -->
       <div class="main_content">
-        <!-- Login Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Login</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!-- Hero Section Start-->
         <Section>
@@ -188,72 +89,6 @@
         </section>
         <!-- Trusted Partner end -->
       </div>
-
-      <!-- Membership Section Start -->
-      <section id="member" class="container text-center">
-        <h3 class="section-title">Become A Member</h3>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
-          Expedita optio eius neque
-          praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
-          voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
-          quidem architecto!</p>
-        <div class="row column-gap-4 justify-content-center card-padding-small">
-          <div class="col-lg-3 col-md-5 mem-card">
-            <h3 class="card-title">Free</h3>
-            <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
-            <ul>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            </ul>
-            <button id="free" class="mem-button">Sign Up</button>
-          </div>
-          <div class="col-lg-3 col-md-5 mem-card">
-            <h3 class="card-title">Standard</h3>
-            <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
-            <ul>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            </ul>
-            <button id="standard" class="mem-button">Sign Up</button>
-          </div>
-          <div class="col-lg-3 col-md-5 mem-card">
-            <h3 class="card-title">Premium</h3>
-            <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
-            <ul>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            </ul>
-            <button id="premium" class="mem-button">Sign Up</button>
-          </div>
-        </div>
-      </section>
-      <!-- Membership Section End -->
-
-      <!-- FAQ Section Start -->
-      <section id="faq" class="container text-center">
-        <h3 class="section-title">Frequently Asked Questions</h3>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
-          Expedita optio eius neque
-          praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
-          voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
-          quidem architecto!</p>
-        <div class="faq-accordian-container">
-          <div class="accordion accordion-flush" id="accordionExample"></div>
-        </div>
-      </section>
-      <!-- FAQ Section End -->
       <!-- Main Content End -->
     </div>
 
@@ -269,3 +104,8 @@
   </body>
 
 </html>
+
+
+
+
+
