membership signup button

--- a/membership.html
+++ b/membership.html
@@ -29,60 +29,63 @@
 
       <!-- Main Content Start -->
       <div class="main_content">
-            <!-- Membership Section Start -->
-            <section id="member" class="container text-center">
-              <h3 class="section-title">Become A Member</h3>
-              <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
-                Expedita optio eius neque
-                praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
-                voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
-                quidem architecto!</p>
-              <div class="row column-gap-4 justify-content-center card-padding-small">
-                <div class="col-lg-3 col-md-5 mem-card">
-                  <h3 class="card-title">Free</h3>
-                  <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
-                  <ul>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                  </ul>
-                  <!-- <button id="free" class="mem-button">Sign Up</button> -->
-                  <button type="button" class="btn btn-primary">Sign Up</button>
-                </div>
-                <div class="col-lg-3 col-md-5 mem-card">
-                  <h3 class="card-title">Standard</h3>
-                  <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
-                  <ul>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                  </ul>
-                  <!-- <button id="standard" class="mem-button">Sign Up</button> -->
-                  <button type="button" class="btn btn-primary">Sign Up</button>
-                </div>
-                <div class="col-lg-3 col-md-5 mem-card">
-                  <h3 class="card-title">Premium</h3>
-                  <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
-                  <ul>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                    <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                  </ul>
-                  <!-- <button id="premium" class="mem-button">Sign Up</button> -->
-                  <button type="button" class="btn btn-primary">Sign Up</button>
-                </div>
-              </div>
-            </section>
-            <!-- Membership Section End -->
+        <!-- Membership Section Start -->
+        <section id="member" class="container text-center">
+          <h3 class="section-title">Become A Member</h3>
+          <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eum illo iste.
+            Expedita optio eius neque
+            praesentium nemo consequatur illo fugit ex odit! Temporibus labore dolorem ad sunt. Facilis voluptatum
+            voluptas consequuntur veritatis nobis corrupti, debitis hic quam accusantium ex! Quis provident doloremque
+            quidem architecto!</p>
+          <div class="row column-gap-4 justify-content-center card-padding-small">
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Free</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$0</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <!-- <button id="free" class="mem-button">Sign Up</button> -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
+                Up</button>
+            </div>
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Standard</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$5</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <!-- <button id="standard" class="mem-button">Sign Up</button> -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
+                Up</button>
+            </div>
+            <div class="col-lg-3 col-md-5 mem-card">
+              <h3 class="card-title">Premium</h3>
+              <p class="card-price">Price: <span style="color: var(--primary-color);">$10</span></p>
+              <ul>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li style="color: var(--primary-color);">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+              </ul>
+              <!-- <button id="premium" class="mem-button">Sign Up</button> -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signUpModal">Sign
+                Up</button>
+            </div>
+          </div>
+        </section>
+        <!-- Membership Section End -->
       </div>
       <!-- Main Content End -->
     </div>
