slider image scale on hover

--- a/index.html
+++ b/index.html
@@ -90,6 +90,30 @@
         <!-- Trusted Partner end -->
       </div>
       <!-- Main Content End -->
+
+      <!-- Footer Section Start -->
+      <!-- <div>
+        <div>
+          <a href="index.html">
+            <div class="logo">
+              <p class="lname">ND</p>
+              <p class="ldesc">Anytime, Anywhere</p>
+            </div>
+          </a>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores blanditiis labore dolore cumque
+            perspiciatis voluptates sint enim eum molestias aperiam?</p>
+        </div>
+        <div>
+          <ul>
+            <li>About Us</li>
+            <li>FAQ</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+      </div> -->
+      <!-- Footer Section End -->
     </div>
 
     <script src="assets/js/jQuery v3.7.1.min.js"></script>
