footer created for pages

--- a/faq.html
+++ b/faq.html
@@ -42,6 +42,10 @@
           </div>
         </section>
         <!-- FAQ Section End -->
+
+        <!-- Footer Section Start -->
+        <custom-footer></custom-footer>
+        <!-- Footer Section End -->
       </div>
       <!-- Main Content End -->
     </div>
