--- a/index.html
+++ b/index.html
@@ -92,26 +92,47 @@
       <!-- Main Content End -->
 
       <!-- Footer Section Start -->
-      <!-- <div>
-        <div>
-          <a href="index.html">
-            <div class="logo">
-              <p class="lname">ND</p>
-              <p class="ldesc">Anytime, Anywhere</p>
-            </div>
-          </a>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores blanditiis labore dolore cumque
-            perspiciatis voluptates sint enim eum molestias aperiam?</p>
+      <custom-footer></custom-footer>
+      <!-- <div class="main-footer-container">
+        <div class="footer-misc">
+          <div class="logo-desc">
+            <a href="index.html">
+              <div class="footer-logo">
+                <p class="lname">ND</p>
+                <p class="ldesc">Anytime, Anywhere</p>
+              </div>
+            </a>
+            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum natus nobis aliquid quis,
+              sapiente minima?</p>
+          </div>
+          <div>
+            <ul>
+              <li>About Us</li>
+              <li>FAQ</li>
+              <li>Newsletters</li>
+              <li></li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Careers</li>
+              <li>Become a partner</li>
+              <li>Events</li>
+              <li></li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <ul>
-            <li>About Us</li>
-            <li>FAQ</li>
-            <li></li>
-            <li></li>
-          </ul>
+        <div class="git">
+          <h5>Get in touch</h5>
+          <p>1635, Some Block<br>some street, some city,<br>123456</p>
+          <p>+91-9167949688</p>
+          <p class="email">someid@somedomain.com</p>
+          <div class="social">
+            <img src="assets/images/social/facebook.svg" alt="facebook">
+            <img src="assets/images/social/instagram.svg" alt="instagram">
+            <img src="assets/images/social/twitter.svg" alt="twitter">
+          </div>
         </div>
-
       </div> -->
       <!-- Footer Section End -->
     </div>
