--- a/membership.html
+++ b/membership.html
@@ -86,6 +86,10 @@
           </div>
         </section>
         <!-- Membership Section End -->
+
+        <!-- Footer Section Start -->
+        <custom-footer></custom-footer>
+        <!-- Footer Section End -->
       </div>
       <!-- Main Content End -->
     </div>
