wow animate fadeIn effect added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Owl Carousel -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="assets/css/animate.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -29,12 +31,17 @@
 
       <!-- Main Content Start -->
       <div class="main_content">
-
+        <div class="loading-spinner">
+          <div class="lds-ring">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
         <!-- Hero Section Start-->
         <Section>
-          <div id='hero-news' class="owl-carousel owl-theme">
-
-          </div>
+          <div id='hero-news' class="owl-carousel owl-theme"></div>
         </Section>
         <!-- Hero Section End-->
 
@@ -50,38 +57,38 @@
             <h5 style="color: var(--primary-color);">Latest</h5>
             <h6 style="cursor: pointer;">View all</h6>
           </div>
-          <div id='latest' class="owl-carousel news-row news-section"></div>
+          <div id='latest' class="wow fadeIn owl-carousel news-row news-section"></div>
           <div class="section-titles">
             <h5 style="color: var(--primary-color);">You may like</h5>
             <h6 style="cursor: pointer;">View all</h6>
           </div>
-          <div id='yml' class="owl-carousel news-row news-section"></div>
+          <div id='yml' class="wow fadeIn owl-carousel news-row news-section"></div>
         </Section>
         <!-- News Section End -->
 
         <!-- Trusted Partner start -->
-        <section id="otp" class="container tp-container text-center">
+        <section id="otp" class="container text-center">
           <h3 class="section-title">Our Trusted Partners</h3>
           <div class="ico-container">
             <div class="ico-div">
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.2s">
                 <img src="assets/images/partner/bbc.png" alt="bbc">
               </div>
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.3s">
                 <img src="assets/images/partner/cnbc.png" alt="cnbc">
               </div>
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.4s">
                 <img src="assets/images/partner/cnn.png" alt="cnn">
               </div>
             </div>
             <div class="ico-div">
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.5s">
                 <img src="assets/images/partner/CoinDesk.png" alt="bbc">
               </div>
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.6s">
                 <img src="assets/images/partner/foxnews.png" alt="cnbc">
               </div>
-              <div class="pngico">
+              <div class="wow fadeIn pngico" data-wow-delay="0.7s">
                 <img src="assets/images/partner/reuters.png" alt="cnn">
               </div>
             </div>
@@ -93,47 +100,6 @@
 
       <!-- Footer Section Start -->
       <custom-footer></custom-footer>
-      <!-- <div class="main-footer-container">
-        <div class="footer-misc">
-          <div class="logo-desc">
-            <a href="index.html">
-              <div class="footer-logo">
-                <p class="lname">ND</p>
-                <p class="ldesc">Anytime, Anywhere</p>
-              </div>
-            </a>
-            <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum natus nobis aliquid quis,
-              sapiente minima?</p>
-          </div>
-          <div>
-            <ul>
-              <li>About Us</li>
-              <li>FAQ</li>
-              <li>Newsletters</li>
-              <li></li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>Careers</li>
-              <li>Become a partner</li>
-              <li>Events</li>
-              <li></li>
-            </ul>
-          </div>
-        </div>
-        <div class="git">
-          <h5>Get in touch</h5>
-          <p>1635, Some Block<br>some street, some city,<br>123456</p>
-          <p>+91-9167949688</p>
-          <p class="email">someid@somedomain.com</p>
-          <div class="social">
-            <img src="assets/images/social/facebook.svg" alt="facebook">
-            <img src="assets/images/social/instagram.svg" alt="instagram">
-            <img src="assets/images/social/twitter.svg" alt="twitter">
-          </div>
-        </div>
-      </div> -->
       <!-- Footer Section End -->
     </div>
 
@@ -145,6 +111,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
+    <script src="assets/js/wow.js"></script>
     <script src="assets/js/custom.js"></script>
   </body>
 
